[package]
name = "kvs"
version = "0.1.0"
authors = ["pingyu"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.14", features = ["derive"] }
slog = { version = "2.7.0" ,features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.9.0"
slog-async = "2.7.0"
thiserror = "1.0.31"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
