[package]
name = "kvs"
version = "0.1.1"
authors = ["pingyu <shui.yu@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
failure = "0.1"
failure_derive = "0.1"
serde = {version = "1.0", features = ["derive"]}
bson = "0.14"
chrono = "0.4"
byteorder = "1.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
